# SHAD_ML_Prediction_Service

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: feature_importance.py  inference.py  main.py  middleware.py  model.txt  plot.py  preprocessing.py  requirements.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: DensityPlotCard.tsx  FeatureImportanceTable.tsx  FileUpload.tsx  Results.tsx  UploadForm.tsx
frontend/src/styles/: useStyles.ts
